# docker-manager

./: Cargo.toml  README.md  build-all.sh
.cargo/: config.toml
src/: docker.rs  lib.rs  main.rs  models.rs  monitor.rs  restart.rs  web.rs
static/: index.html
