[package]
name = "docker-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = "0.14.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs", "cors"] }
lazy_static = "1.4"
winapi = { version = "0.3.9", features = ["winerror"] }